feat: enhance CLI with build/pack commands, templates, and documentation
## CLI Enhancements
- Add 'modulus build' command for compiling modules
- Add 'modulus pack' command for packaging modules as .modpkg
- Fix pack command output path and package naming (use module name instead of GUID)
- Fix IModuleCleanupService dependency in CliServiceProvider

## Project Templates
- Add dotnet new templates (modulus-avalonia, modulus-blazor)
- Add VSIX extension project structure
- Add Nuke targets: pack-templates, publish-templates, pack-vsix
- Update template package references to Agibuild.Modulus.*

## Documentation
- Add getting-started.md and getting-started.zh-CN.md
- Add cli-reference.md with complete command reference
- Add module-development.md with development guide
- Update README.md and README.zh-CN.md with new CLI commands

## Build System
- Enable nullable reference types in build project
- Fix nullable warnings in BuildTasks.cs
- Add template packaging targets

## Proposal
- Add add-cli-integration-tests proposal for CLI testing framework

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -5,26 +5,35 @@
   -->
   
   <PropertyGroup>
-    <!-- Auto-increment version: Major.Minor.Build.Revision based on UTC datetime -->
-    <!-- Format: 1.0.YYDDD.HHmm where DDD=day of year, HHmm=time -->
-    <!-- Example: 1.0.25344.1430 = 2025, day 344, 14:30 UTC -->
-    <Version>1.0.$([System.DateTime]::UtcNow.ToString("yy"))$([System.DateTime]::UtcNow.DayOfYear.ToString("000")).$([System.DateTime]::UtcNow.ToString("HHmm"))</Version>
+    <!-- 
+      Version Configuration:
+      - Set via command line: dotnet build -p:Version=1.2.3
+      - Set via environment: VERSION=1.2.3 nuke pack-libs
+      - Default: Auto-increment based on UTC datetime (1.0.YYDDD.HHmm)
+    -->
+    <Version Condition="'$(Version)' == ''">1.0.$([System.DateTime]::UtcNow.ToString("yy"))$([System.DateTime]::UtcNow.DayOfYear.ToString("000")).$([System.DateTime]::UtcNow.ToString("HHmm"))</Version>
     
     <!-- NuGet Metadata -->
     <Authors>Modulus Team</Authors>
+    <Company>Agibuild</Company>
+    <Copyright>Copyright © $([System.DateTime]::UtcNow.Year) Agibuild. All rights reserved.</Copyright>
     <PackageProjectUrl>https://github.com/user/Modulus</PackageProjectUrl>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageReadmeFile>README.md</PackageReadmeFile>
+    <PackageIcon>icon.png</PackageIcon>
+    <PackageTags>modulus;plugin;module;extensibility;avalonia;blazor;desktop;web</PackageTags>
     <RepositoryUrl>https://github.com/user/Modulus</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
     
     <!-- Build Properties -->
     <LangVersion>latest</LangVersion>
     <EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild>
   </PropertyGroup>
 
-  <!-- Include README in all packages -->
+  <!-- Include README and icon in all packages -->
   <ItemGroup>
     <None Include="$(MSBuildThisFileDirectory)README.md" Pack="true" PackagePath="\" Visible="false" />
+    <None Include="$(MSBuildThisFileDirectory)docs\Images\modules-logo-100.png" Pack="true" PackagePath="icon.png" Visible="false" />
   </ItemGroup>
 
 </Project>
