--- a/src/Modulus.Cli/Templates/Blazor/UI.Blazor.csproj.template
+++ b/src/Modulus.Cli/Templates/Blazor/UI.Blazor.csproj.template
@@ -12,8 +12,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Modulus.Sdk" Version="1.0.0" />
-    <PackageReference Include="Modulus.UI.Abstractions" Version="1.0.0" />
+    <PackageReference Include="Agibuild.Modulus.Sdk" Version="1.0.*" />
+    <PackageReference Include="Agibuild.Modulus.UI.Abstractions" Version="1.0.*" />
+    <PackageReference Include="Agibuild.Modulus.UI.Blazor" Version="1.0.*" />
     <PackageReference Include="MudBlazor" Version="8.15.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="10.0.0" />
   </ItemGroup>
