--- a/tests/Modulus.Cli.IntegrationTests/Modulus.Cli.IntegrationTests.csproj
+++ b/tests/Modulus.Cli.IntegrationTests/Modulus.Cli.IntegrationTests.csproj
@@ -18,13 +18,23 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="10.0.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="18.0.1" />
     <PackageReference Include="xunit" Version="2.9.3" />
     <PackageReference Include="xunit.runner.visualstudio" Version="3.1.5">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <!-- Explicit versions to resolve conflicts -->
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="10.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="10.0.1" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="10.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\Modulus.Cli\Modulus.Cli.csproj" />
+    <ProjectReference Include="..\..\src\Modulus.Core\Modulus.Core.csproj" />
+    <ProjectReference Include="..\..\src\Modulus.Sdk\Modulus.Sdk.csproj" />
+    <ProjectReference Include="..\..\src\Shared\Modulus.Infrastructure.Data\Modulus.Infrastructure.Data.csproj" />
   </ItemGroup>
 
   <ItemGroup>
@@ -32,7 +42,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\Modulus.Core\Modulus.Core.csproj" />
+    <Content Include="xunit.runner.json" CopyToOutputDirectory="PreserveNewest" />
   </ItemGroup>
 
 </Project>
