chore: archive completed specs and add VSIX resources
Archived changes:
- add-cli-integration-tests
- add-module-template
- adopt-vsixmanifest-format

Merged specs:
- cli-testing/spec.md (new)
- module-template/spec.md (new)
- runtime/spec.md (updated with vsixmanifest format)

VSIX resources:
- Added icon.png, LICENSE.txt
- Added ProjectTemplates directory
- Updated csproj with resource references
- Fixed GitHub URL to AgiBuild/Modulus

--- a/templates/VSIX/Modulus.Templates.Vsix.csproj
+++ b/templates/VSIX/Modulus.Templates.Vsix.csproj
@@ -29,6 +29,12 @@
 
   <ItemGroup>
     <None Include="source.extension.vsixmanifest" />
+    <Content Include="icon.png">
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
+    <Content Include="LICENSE.txt">
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
   </ItemGroup>
 
 </Project>
