feat: add Home module and reusable UI components

--- a/src/Hosts/Modulus.Host.Avalonia/appsettings.json
+++ b/src/Hosts/Modulus.Host.Avalonia/appsettings.json
@@ -3,6 +3,11 @@
     "DatabaseName": "AvaloniaModulus",
     "Runtime": {
       "SharedAssemblies": [
+        "Modulus.Core",
+        "Modulus.Sdk",
+        "Modulus.UI.Abstractions",
+        "Modulus.UI.Avalonia",
+        "Modulus.UI.Blazor",
         "Avalonia",
         "Avalonia.Base",
         "Avalonia.Controls",
