--- a/src/Hosts/Modulus.Host.Blazor/appsettings.json
+++ b/src/Hosts/Modulus.Host.Blazor/appsettings.json
@@ -1,6 +1,15 @@
 {
   "Modulus": {
-    "DatabaseName": "BlazorModulus"
+    "DatabaseName": "BlazorModulus",
+    "Runtime": {
+      "SharedAssemblies": [
+        "Modulus.Core",
+        "Modulus.Sdk",
+        "Modulus.UI.Abstractions",
+        "Modulus.UI.Avalonia",
+        "Modulus.UI.Blazor"
+      ]
+    }
   },
   "Serilog": {
     "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
