--- a/src/Modulus.UI.Abstractions/Modulus.UI.Abstractions.csproj
+++ b/src/Modulus.UI.Abstractions/Modulus.UI.Abstractions.csproj
@@ -6,6 +6,7 @@
     <TargetFramework>net10.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <ModulusAssemblyDomain>Shared</ModulusAssemblyDomain>
     <OutputPath>..\..\artifacts\bin\</OutputPath>
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
     <AppendRuntimeIdentifierToOutputPath>false</AppendRuntimeIdentifierToOutputPath>
