--- a/src/Modulus.Core/Modulus.Core.csproj
+++ b/src/Modulus.Core/Modulus.Core.csproj
@@ -21,6 +21,7 @@
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="10.0.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="10.0.1" />
     <PackageReference Include="NuGet.Versioning" Version="7.0.1" />
+    <PackageReference Include="System.Reflection.MetadataLoadContext" Version="10.0.0" />
     <PackageReference Include="Serilog" Version="4.3.0" />
     <PackageReference Include="Serilog.Extensions.Logging" Version="10.0.0" />
     <PackageReference Include="Serilog.Sinks.File" Version="7.0.0" />
