--- a/tests/Modulus.Core.Tests/Modulus.Core.Tests.csproj
+++ b/tests/Modulus.Core.Tests/Modulus.Core.Tests.csproj
@@ -8,7 +8,7 @@
     <Nullable>enable</Nullable>
     <IsPackable>false</IsPackable>
     <IsTestProject>true</IsTestProject>
-    <OutputPath>..\..\artifacts\tests\</OutputPath>
+    <OutputPath>..\..\artifacts\tests\$(MSBuildProjectName)\</OutputPath>
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
     <AppendRuntimeIdentifierToOutputPath>false</AppendRuntimeIdentifierToOutputPath>
   </PropertyGroup>
