--- a/tests/Modulus.UI.Avalonia.Tests/Modulus.UI.Avalonia.Tests.csproj
+++ b/tests/Modulus.UI.Avalonia.Tests/Modulus.UI.Avalonia.Tests.csproj
@@ -8,7 +8,7 @@
     <Nullable>enable</Nullable>
     <IsPackable>false</IsPackable>
     <IsTestProject>true</IsTestProject>
-    <OutputPath>..\..\artifacts\tests\</OutputPath>
+    <OutputPath>..\..\artifacts\tests\$(MSBuildProjectName)\</OutputPath>
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
     <AppendRuntimeIdentifierToOutputPath>false</AppendRuntimeIdentifierToOutputPath>
   </PropertyGroup>
@@ -17,6 +17,9 @@
     <PackageReference Include="Avalonia" Version="11.3.9" />
     <PackageReference Include="Avalonia.Headless" Version="11.3.9" />
     <PackageReference Include="Avalonia.Headless.XUnit" Version="11.3.9" />
+    <!-- Force consistent Microsoft.Extensions.* versions across all test projects (shared OutputPath) -->
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="10.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="10.0.1" />
     <PackageReference Include="coverlet.collector" Version="6.0.4">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
