fix(modules): remove dev import, correct status, fix home installed count

--- a/src/Modules/EchoPlugin/EchoPlugin.UI.Blazor/EchoPlugin.UI.Blazor.csproj
+++ b/src/Modules/EchoPlugin/EchoPlugin.UI.Blazor/EchoPlugin.UI.Blazor.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\EchoPlugin.Core\EchoPlugin.Core.csproj" />
+    <ProjectReference Include="..\..\..\Modulus.Core\Modulus.Core.csproj" />
     <ProjectReference Include="..\..\..\Modulus.Sdk\Modulus.Sdk.csproj" />
     <ProjectReference Include="..\..\..\Modulus.UI.Abstractions\Modulus.UI.Abstractions.csproj" />
   </ItemGroup>
