--- a/src/Modules/SimpleNotes/SimpleNotes.UI.Blazor/SimpleNotes.UI.Blazor.csproj
+++ b/src/Modules/SimpleNotes/SimpleNotes.UI.Blazor/SimpleNotes.UI.Blazor.csproj
@@ -23,6 +23,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\SimpleNotes.Core\SimpleNotes.Core.csproj" />
+    <ProjectReference Include="..\..\..\Modulus.Core\Modulus.Core.csproj" />
     <ProjectReference Include="..\..\..\Modulus.Sdk\Modulus.Sdk.csproj" />
     <ProjectReference Include="..\..\..\Modulus.UI.Abstractions\Modulus.UI.Abstractions.csproj" />
   </ItemGroup>
