--- a/src/Modulus.Cli/Templates/Blazor/MainView.razor.template
+++ b/src/Modulus.Cli/Templates/Blazor/MainView.razor.template
@@ -1,6 +1,10 @@
+@page "/{{ModuleNameLower}}"
+@using Modulus.Sdk
+@using Modulus.UI.Abstractions
 @using Modulus.Modules.{{ModuleName}}.ViewModels
-@using MudBlazor 
-@inherits ComponentBase
+@using MudBlazor
+@attribute [BlazorViewMenu("main", "{{DisplayName}}", Icon = IconKind.{{Icon}}, Order = {{Order}})]
+@inject MainViewModel ViewModel
 
 <MudCard Class="ma-4">
     <MudCardHeader>
@@ -15,9 +19,3 @@
         <MudButton Variant="Variant.Filled" Color="Color.Primary" OnClick="@(() => ViewModel.SayHelloCommand.Execute(null))">Say Hello</MudButton>
     </MudCardActions>
 </MudCard>
-
-@code {
-    [Parameter]
-    public MainViewModel ViewModel { get; set; } = default!;
-}
-
