--- a/src/Modulus.Cli/Templates/Core/ViewModels/MainViewModel.cs.template
+++ b/src/Modulus.Cli/Templates/Core/ViewModels/MainViewModel.cs.template
@@ -1,9 +1,11 @@
 using CommunityToolkit.Mvvm.ComponentModel;
 using CommunityToolkit.Mvvm.Input;
+using Modulus.Sdk;
 using Modulus.UI.Abstractions;
 
 namespace Modulus.Modules.{{ModuleName}}.ViewModels;
 
+[AvaloniaViewMenu("main", "Main", Icon = IconKind.{{Icon}}, Order = {{Order}})]
 public partial class MainViewModel : ViewModelBase
 {
     [ObservableProperty]
@@ -18,6 +20,18 @@ public partial class MainViewModel : ViewModelBase
     private void SayHello()
     {
         Message = $"Hello at {DateTime.Now:HH:mm:ss}";
+    }
+
+    public override Task<bool> CanNavigateFromAsync(NavigationContext context)
+    {
+        // Example hook: block navigation when needed.
+        return Task.FromResult(true);
+    }
+
+    public override Task OnNavigatedToAsync(NavigationContext context)
+    {
+        // Example hook: read context.Options.Parameters.
+        return Task.CompletedTask;
     }
 }
 
