refactor(hosts): migrate avalonia and blazor hosts to host sdk

--- a/src/Hosts/Modulus.Host.Avalonia/Modulus.Host.Avalonia.csproj
+++ b/src/Hosts/Modulus.Host.Avalonia/Modulus.Host.Avalonia.csproj
@@ -62,6 +62,7 @@
     <ProjectReference Include="..\..\Modules\EchoPlugin\EchoPlugin.UI.Avalonia\EchoPlugin.UI.Avalonia.csproj" ReferenceOutputAssembly="false" />
     <ProjectReference Include="..\..\Modules\ComponentsDemo\ComponentsDemo.UI.Avalonia\ComponentsDemo.UI.Avalonia.csproj" ReferenceOutputAssembly="false" />
     <ProjectReference Include="..\..\Modules\SimpleNotes\SimpleNotes.UI.Avalonia\SimpleNotes.UI.Avalonia.csproj" ReferenceOutputAssembly="false" />
+    <ProjectReference Include="..\..\Modulus.HostSdk.Runtime\Modulus.HostSdk.Runtime.csproj" />
   </ItemGroup>
   
   <ItemGroup>
